# logkicker

./: .gitignore  README.md  compactlogsparser.py  jupyter_lite_config.json  logfilters.sh  logkicker.py  pyproject.toml  reconstructionstats.py  requirements.txt
.github/workflows/: deploy.yml
compactblocks/: logsparser.py  plots.py  stats.py
compactblocks/2025-07-11-first-report/: Prefilling.ipynb  period.md  prefiller.xlsx  prefiller_received.csv  prefiller_sent.csv  prefillreceiver.xlsx  prefillreceiver_received.csv  prefillreceiver_sent.csv
logkicker/: logkicker.py
