[project]
name = "logkicker"
version = "0.0.0.0.0.0.0.0.0.0.1"

dependencies = [
    "jupyterlite-core",
    "jupyterlite-pyodide-kernel",
    "jupyterlab",
    "notebook",
    "ipympl",
    "pyparsing",
    "seaborn",
    "xlsxwriter",
    "mplcursors",
]

[build-system]
requires = [
  "setuptools >= 40.9.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["compactblocks", "logkicker"]
